<resources>
    <string name="app_name">Levi</string>
    <string name="Tit_presion">Pressurized flow</string>
    <string name="Tit_gravedad">Free surface flow</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_contacto">Contact</string>
    <string name="Seccion_canal">Section</string>
    <string name="my_credits" translatable="false">Joaquín Pérez Valera. \njoaquinperezvalera@gmail.com</string>
    <string name="adMobId">ca-app-pub-9916459118611631~2051967328</string>
    <string name="UnitId">ca-app-pub-9916459118611631/8078408912</string>
    <string name="Tit_seccion_Circular">Circular section</string>
    <string name="Tit_seccion_Rectangular">Rectangular section</string>
    <string name="Tit_seccion_trapecial">Trapezoidal</string>
    <string name="Tit_seccion_irregular">Irregular section</string>
    <string name="Tit_seccion_portal">Tunnel Section</string>
    <string name="Text_tipo_secciont_Rect">Type of section</string>
    <string name="Rect_dimensiones">Dimensions \nBxH</string>
    <string name="Text_fondo">Bottom \nwidth \n(B)</string>
    <string name="Text_altura">Height \n(H)</string>
    <string name="Tit_ayuda">Help</string>
    <string name="Tit_Contacto">About</string>
    <string name="Contactar">Contact</string>
    <string name="label_material">Material</string>
    <string name="label_RD">DR</string>
    <string name="label_Cedula">Schedule</string>
    <string name="label_diam">DN/Dint</string>
    <string name="label_calc">Calculate</string>
    <string name="help">Help</string>
    <string name="tuberias">Calcular Tuberías</string>
    <string name="Tit_Darcy">Pressurized flow</string>
    <string name="Tit_Manning">Free surface flow</string>
    <string name="Text_Pendiente">Slope \nm/1000m</string>
    <string name="Text_Freeboard">Freeboard</string>
    <string name="Text_MannRug">n Manning</string>
    <string name="Tit_rugosidad_trapecial">Roughness</string>
    <string name="Text_H_trapecial">Height \nfree (m)</string>
    <string name="Text_H_portal">Height \nHt (m)</string>
    <string name="Text_Regimen">Flow regime: </string>
    <string name="Text_B_trapecial">Bottom</string>
    <string name="Text_talud_izq">Slope \nLeft. k:1</string>
    <string name="Text_talud_der">Slope \nRight. k:1</string>
    <string name="Hint_altura_trap">Height (m)</string>
    <string name="Hint_ancho_trap">Width (m)</string>
    <string name="Hint_talud">Slope</string>
    <string name="Hint">Slope</string>
    <string name="Text_TVRug_fondo">Bottom</string>
    <string name="Text_TVRug_Tder">Slope \nRight.</string>
    <string name="Text_TVRug_Tizq">Slope \nLeft</string>
    <string name="Hint_rugosidad">Manning</string>
    <string name="Text_B_portal">Width (2R) \n(m)</string>
    <string name="Text_H_muro">Wall height \n(m)</string>
    <string name="Hint_techo">Ceiling</string>
    <string name="Hint_Muro_izq_tramo1">n1</string>
    <string name="Hint_Muro_izq_tramo2">n2</string>
    <string name="Hint_Muro_der_tramo1">n1</string>
    <string name="Hint_Muro_der_tramo2">n2</string>
    <string name="Text_Portal_fondo">Bottom</string>
    <string name="Text_M_izq">Wall \nleft</string>
    <string name="Text_M_der">Wall \nRight</string>
    <string name="Hint_n_techo" translatable="false">na</string>
    <string name="Hint_n_base" >nb</string>
    <string name="Portal_top" >Arc</string>
    <string name="Hint_pendiente">Slope</string>
    <string name="Hint_variable">Flow</string>
    <string name="Tit_dim_trapecial">Dimensions</string>
    <string name="menu_simbologia">Symbology</string>
    <string name="menu_ayuda">Help</string>
    <string name="menu_ejemplo">Example</string>
    <string name="menu_licencia">Licence</string>
    <string name="Acerca_de">Levi</string>
    <string name="Acerca_de_Levi"> Levi is an app intended to help to perform simple hydraulic calculations, using information of commercial
        pipes and materials. It is named Levi, honoring Engineer Enzo Levi.</string>
    <string name="Tit_creditos">Credits</string>
    <string name="ETNumberWarn">Define a value to make the calculations</string>
    <string name="ETPositiveWarn">Define a positive value to make the calculations</string>
    <string name="Gasto">Flow (l/s)</string>
    <string name="Velocidad">Velocity (m/s)</string>
    <string name="Perdidas">Headloss (m/km)</string>
    <string name="Rugosidad">Roughness (mm)</string>
    <string name="Reynolds">Reynolds</string>
    <string-array name="secciones_canales">
        <item>Circular</item>
        <item>Trapezoidal</item>
        <item>Rectangular</item>
        <item>Segmental tunnel</item>
        <item>Irregular</item>
    </string-array>
    <string-array name="material_canales">
        <item>PVC</item>
        <item>HDPE</item>
        <item>Concrete</item>
    </string-array>
    <string-array name="canal_rect">
        <item>Precast box</item>
        <item>Tailored section</item>
    </string-array>
    <string-array name="lista_materiales">
        <item>PVC Metric series</item>
        <item>PVC English series</item>
        <item>HDPE</item>
        <item>PPR</item>
        <item>Steel</item>
    </string-array>
    <string-array name="Tuberias_sanitarias">
        <item>PVC wastewater</item>
        <item>Concrete</item>
        <item>Reinforced concrete</item>
        <item>HDPE wastewater</item>
        <item>Duromaxx</item>
        <item>Ultraflo 12 Galv</item>
        <item>Ultraflo 14 Galv</item>
        <item>Ultraflo 16 Galv</item>
        <item>Ultraflo 10 Alum</item>
        <item>Ultraflo 12 Alum</item>
        <item>Ultraflo 14 Alum</item>
        <item>Ultraflo 16 Alum</item>
    </string-array>
    <string-array name="unidades">
        <item>Q (l/s)</item>
        <item>Vel (m/s)</item>
        <item>Hl (m/km)</item>
    </string-array>
    <string-array name="unidades_san">
        <item>Q (l/s)</item>
        <item>Vel (m/s)</item>
        <item>Hyd. Depth (m)</item>
    </string-array>
    <string-array name="listRD">
        <item>7</item>
        <item>7.3</item>
        <item>9</item>
        <item>11</item>
        <item>13.5</item>
        <item>15.5</item>
        <item>17</item>
        <item>21</item>
        <item>26</item>
        <item>32.5</item>
        <item>41</item>
    </string-array>
    <string-array name="listPVCMetric">
        <item>3.5</item>
        <item>5</item>
        <item>7</item>
        <item>10</item>
    </string-array>
    <string-array name="listPVCInglesa">
        <item>13.5</item>
        <item>21</item>
        <item>26</item>
        <item>41</item>
    </string-array>
    <string-array name="listPPR">
        <item>16</item>
    </string-array>
    <string-array name="listAcero">
        <item>5</item>
        <item>10</item>
        <item>10S</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>60</item>
        <item>80</item>
        <item>120</item>
        <item>140</item>
        <item>160</item>
        <item>XS</item>
        <item>XXS</item>
        <item>STD</item>
    </string-array>
    <string name="Tit_MatDesc">Materials</string>
    <string name="MatDescription">PVC Metric Series- PVC
        made under the norm NMX-E-145/1.\n \nPVC English
        Series - PVC pipes made under the norm
         ASTM D-2241 o NMX-E224.\n \nPPR  - PPR pipes
        made under the norm NMX-E-226/2
        CNCP.\n \nSteel - Steel pipes made under the norm  ASTM A 53. \n
    </string>
    <string name="Tit_Recursos">Resources: </string>
    <string name="LinkPVCMetric">https://www.tuberiadepvc.mx/Tuberia-Hidraulica-de-PVC-Serie-Metrica.html</string>
    <string name="LinkPVCIng">https://www.tuberiadepvc.mx/Tuberia-Hidraulica-de-PVC-Serie-Inglesa.html</string>
    <string name="LinkPEAD">https://www.tuberiamoreno.com/productos/hidraulico/tuberia-de-polietileno-de-alta-densidad-pead-4608-4710-rd-7-0-rd-7-3-rd-9-rd-11-dr-13-5-rd-15-5-rd-17-rd-21-rd-26-rd-32-5-rd-41</string>
    <string name="LinkPPR">https://rotoplas.com.mx/catalogo/tuboplus-hidraulico/</string>
    <string name="LinkAcero">http://www.covalco.mx/manuales-y-normas.html</string>
    <string name="LinkPVCSan">https://www.tuberiadepvc.mx/Tuberia-de-PVC-Sanitaria-Metrica.html</string>
    <string name="LinkPEADSan">http://www.hancor.com/pdf/es_sanitite.pdf</string>
    <string name="LinkConcSimple">https://tubocreto.com/productos/tubos/index.html</string>
    <string name="LinkCajon">https://tubocreto.com/productos/cajones/index.html</string>
    <string name="LinkUltraFlo">https://www.firheg.com</string>
    <string name="Tit_Hidraulica">Hydraulics</string>
    <string name="Subtit_presion">Pressurized flow</string>
    <string name="Cont_presion1">Headlosses in pressurized pipes are calculated using the Darcy-Weisbach
        equation:</string>
    <string name="Cont_presion2">where: \nh - friction losses in the pipe, m; \nv - flow velocity en m/s; \ng -  acceleration due to gravity, 9.81 m/s²;
        \nL - pipe length, in meters; \nD - Pipe diameter, in meters; \nf - Darcy\'s friction factor
        , calculated with Swamee-Jain equation</string>
    <string name="Cont_presion3">k - material roughness, in meters; \nRe - Reynolds numbers (No dimensions)</string>
    <string name="Cont_presion4"> kinematic viscosity, 0.00000104 m²/s</string>
    <string name="Cont_presion5">To calculate the headloss per kilometer it is considered L = 1,000 m.</string>
    <string name="Formula_Swamee">$$f = \\frac{0.25}{[log_{10}(\\frac{k/D}{3.7}+
        \\frac{5.74}{Re^{0.9}})]^2}$$</string>
    <string name="Formula_Darcy">
        $$h_f = f \\frac{L}{D}\\frac{v^2}{2g}$$
    </string>
    <string name="Formula_Reynolds">
                $$Re =  \\frac{vD}{\\nu}$$

    </string>
    <string name="title_activity_flujo_apresion">Pressurized flow</string>
    <string name="title_activity_flujo_acanal">Open channel flow</string>
    <string name="Subtit_gravedad">Open channel flow</string>
    <string name="Cont_gravedad1">Hydraulic variables for open channel flow are calculated using the Manning\'s equation, as shown below</string>
    <string name="Formula_Manning">
                $$v =  \\frac{1}{n} R_h^{\\frac{2}{3}} S^{\\frac{1}{2}}$$

    </string>
    <string name="Cont_gravedad2">where \nn - Manning\'s roughness coefficient; \nRh - Hydraulic Radius, m;\nS - Hydraulic slope\n</string>
    <string name="Formula_Rh">
                $$R_h =  \\frac{A}{Pm}$$

    </string>
    <string name="Cont_gravedad3">A - Flow area - m2;\nPm - Wetted perimeter, m.</string>
    <string name="Cont_gravedad_4">Froude\'s number is calculated using the equation</string>
    <string name="Formula_Froude">
                $$F =  \\frac{velocidad}{(g*D)^{0.5}}$$
    </string>
    <string name="Cont_gravedad_5">Where: \ng - acceleration due to gravity, 9.81 m/s2;
        \nD - Hydraulic depth (D=A/T); \nA- Flow area y \nT- top width.\n
        If Froude\'s number is less than 1 the flow is subcritical; equal to 1 it is critical and greater than 1 the flow is supercritical.
    </string>
    <string name="Text_Btn_Manning">Selection of Manning\'s coefficient</string>
    <string name="Calculo_fallido">The pipe with the assigned slope has not the required capacity to convey the flow.
         Try with a greater diameter to have a free surface flow.</string>
    <string name="Calculo_fallidoV">The pipe with the assigned slope has not the required capacity to convey the flow.
         Try with a greater diameter to have a free surface flow.</string>
    <string name="Calculo_fallidoH">Hydraulic depth is greater than the available height.</string>
    <string name="Toast_add_slope">The missing field is empty or is negative, set a value for the slope.</string>
    <string name="Toast_add_values">Set values for all the variables.</string>
    <string name="Cont_Resultados">Results</string>
</resources>